Better formatting for titles

--- a/PS1_Czapran_Ellero_Porta_Tan.tex
+++ b/PS1_Czapran_Ellero_Porta_Tan.tex
@@ -45,7 +45,8 @@
 
 \maketitle
 
-\section{Problem 1}
+\section*{Problem 1}
+\stepcounter{section}
 
 \begin{enumerate}[label=\alph*.)]
     \item In this context $\succ$ means that
@@ -128,7 +129,9 @@
           \end{proof}
 \end{enumerate}
 
-\section{Problem 2}
+\section*{Problem 2}
+\stepcounter{section}
+
 $\succsim$ on $\mathbb{R}^2$ is said to be a weak order if it satisfies \textbf{completeness} and \textbf{transitivity}.
 
 \begin{description}
@@ -197,7 +200,8 @@ $\succsim$ on $\mathbb{R}^2$ is said to be a weak order if it satisfies \textbf{
           From (2) and (4), we have that $x_1 = y_1$, $x_2 \ge y_2$, and $y_2 \ge x_2$, which implies that $x_2 = y_2$, thus $x = y$. Since for any $x, y \in \mathbb{R}^2$, $x \succsim y$ and $y \succsim x$ implies that $x = y$, $\succsim$ is \textbf{antisymmetric}.
 \end{description}
 
-\section{Problem 3}
+\section*{Problem 3}
+\stepcounter{section}
 
 \begin{enumerate}[label=\alph*.)]
     \item The statement is true.
@@ -218,7 +222,9 @@ $\succsim$ on $\mathbb{R}^2$ is said to be a weak order if it satisfies \textbf{
           \end{proof}
 \end{enumerate}
 
-\section{Problem 4}
+\section*{Problem 4}
+\stepcounter{section}
+
 Let $\succsim$ be a \textbf{weak order}, i.e. transitive and complete. We want to prove that for $X \in \mathcal{D}$, $X \succeq Y$ for every $Y \in \mathcal{D}$ \textit{if and only if} there exists $x \in \sigma(X)$ such that $x \succsim z$ for every $z \in \mathbf{X}$.
 \begin{equation}
     \sigma(X) = \{\hat x \in X\colon \forall x \in X, \hat x \succsim x\}
